correct repository url

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 	    <%}%>
 	</ul>
 </script>
-<script type="text/javascript" src="ks-template.js"></script>
+<script type="text/javascript" src="JST.js"></script>
 <script type="text/javascript">
 	JST.cache('t-1', 'hello <%=name%>');
 	JST.cache('t-2', document.getElementById('t-2').innerHTML);
